--- a/Federated Learning/PySyft_quickstart.ipynb
+++ b/Federated Learning/PySyft_quickstart.ipynb
@@ -80,7 +80,7 @@
        "✅ hagrid==0.2.110 (latest stable)<br />"
       ],
       "text/plain": [
-       "<hagrid.nb_output.NBOutput at 0x7f9f38c8ea60>"
+       "<hagrid.nb_output.NBOutput at 0x7fc9a9045940>"
       ]
      },
      "execution_count": 2,
@@ -120,7 +120,7 @@
        "✅ macOS<br />✅ Python 3.9.12<br />✅ syft==0.6.0 (latest stable)<br />"
       ],
       "text/plain": [
-       "<hagrid.nb_output.NBOutput at 0x7f9f38c8e9d0>"
+       "<hagrid.nb_output.NBOutput at 0x7fc9a902a3d0>"
       ]
      },
      "execution_count": 3,
@@ -162,7 +162,7 @@
        "✅ Git 2.37.2<br />✅ Docker 20.10.17<br />✅ Docker Compose 2.10.2<br />"
       ],
       "text/plain": [
-       "<hagrid.nb_output.NBOutput at 0x7f9f789224f0>"
+       "<hagrid.nb_output.NBOutput at 0x7fc998a313d0>"
       ]
      },
      "execution_count": 4,
@@ -204,21 +204,43 @@
      "text": [
       "\n",
       "\u001b[2K✅ Updated HAGrid from branch: dev from branch: dev\u001b[0m0m\n",
-      "\u001b[2K\u001b[32m⠴\u001b[0m \u001b[1;34mUpdating HAGrid from branch: dev\u001b[0m\n",
+      "\u001b[2K\u001b[32m⠼\u001b[0m \u001b[1;34mUpdating HAGrid from branch: dev\u001b[0m\n",
       "\u001b[2K\u001b[32m⠸\u001b[0m \u001b[1;34mChecking for Docker Service\u001b[0m   ice\u001b[0m   \n",
       "\u001b[1A\u001b[2K✅ Docker service is running\n",
       "✅ Git 2.37.2\n",
       "✅ Docker 20.10.17\n",
       "✅ Docker Compose 2.10.2\n",
       "\n",
-      "Error: 8081 is in use, either free the port or try: 8081+ to auto search for a port\n",
+      "Launching a PyGrid Domain node on port 8088!\n",
       "\n",
-      "\n"
+      "  - TYPE: domain\n",
+      "  - NAME: test_domain\n",
+      "  - TAG: 51eb25e41d7a4b5351017dcb2feeafcfdde2a743d2407e5b7990b7407e2ea83a\n",
+      "  - PORT: 8088\n",
+      "  - DOCKER COMPOSE: v2.10.2\n",
+      "  - TAIL: False\n",
+      "\n",
+      "\n",
+      "\u001b[1;32m⠋\u001b[0m\u001b[1;34m Launching Docker Images \u001b[0m\u001b[1;32m \u001b[0m     \n",
+      "\u001b[2K✅ \u001b[1;32mPulling [9 / 9]\u001b[0m \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[35m100%\u001b[0m \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[2K✅ \u001b[1;32mLaunching [8 / 8]\u001b[0m \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[35m100%\u001b[0m \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h\n",
+      "\u001b[1;32m⠋\u001b[0m\u001b[1;34m Checking  Node API \u001b[0m\u001b[1;32m \u001b[0m  \n",
+      "\u001b[2K✅ test_domain Domain Docker Containers Created.Creation\u001b[0m0m\n",
+      "\u001b[2K✅ Syft\u001b[0m \u001b[1;91mInstalling Syft\u001b[0mainer Creation\u001b[0m\n",
+      "\u001b[2K✅ Containers Startup Complete.[0m\n",
+      "\u001b[2K\u001b[32m⠧\u001b[0m \u001b[1;91mInstalling Syft\u001b[0m\n",
+      "\u001b[1A\u001b[2K┏━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━┓\n",
+      "┃\u001b[1m \u001b[0m\u001b[1mPyGrid   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mInfo                                     \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m600\u001b[0m\u001b[1m \u001b[0m┃\n",
+      "┡━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━┩\n",
+      "│\u001b[35m \u001b[0m\u001b[35mUI (βeta)\u001b[0m\u001b[35m \u001b[0m│ http://localhost:8088/login               │ ✅  │\n",
+      "│\u001b[35m \u001b[0m\u001b[35mapi      \u001b[0m\u001b[35m \u001b[0m│ http://localhost:8088/api/v1/openapi.json │ ✅  │\n",
+      "└───────────┴───────────────────────────────────────────┴─────┘\n"
      ]
     }
    ],
    "source": [
-    "!hagrid launch test_domain domain to docker:8081 --tag=latest --tail=false --silent"
+    "!hagrid launch test_domain domain to docker:8088 --tag=latest --tail=false --silent"
    ]
   },
   {
@@ -249,8 +271,8 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> PyGrid    </span>┃<span style=\"font-weight: bold\"> Info                                      </span>┃<span style=\"font-weight: bold\">    </span>┃\n",
        "┡━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━┩\n",
-       "│<span style=\"color: #800080; text-decoration-color: #800080\"> UI (βeta) </span>│ http://localhost:8081/login               │ ✅ │\n",
-       "│<span style=\"color: #800080; text-decoration-color: #800080\"> api       </span>│ http://localhost:8081/api/v1/openapi.json │ ✅ │\n",
+       "│<span style=\"color: #800080; text-decoration-color: #800080\"> UI (βeta) </span>│ http://localhost:8088/login               │ ✅ │\n",
+       "│<span style=\"color: #800080; text-decoration-color: #800080\"> api       </span>│ http://localhost:8088/api/v1/openapi.json │ ✅ │\n",
        "└───────────┴───────────────────────────────────────────┴────┘\n",
        "</pre>\n"
       ],
@@ -258,8 +280,8 @@
        "┏━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mPyGrid   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mInfo                                     \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m  \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━┩\n",
-       "│\u001b[35m \u001b[0m\u001b[35mUI (βeta)\u001b[0m\u001b[35m \u001b[0m│ http://localhost:8081/login               │ ✅ │\n",
-       "│\u001b[35m \u001b[0m\u001b[35mapi      \u001b[0m\u001b[35m \u001b[0m│ http://localhost:8081/api/v1/openapi.json │ ✅ │\n",
+       "│\u001b[35m \u001b[0m\u001b[35mUI (βeta)\u001b[0m\u001b[35m \u001b[0m│ http://localhost:8088/login               │ ✅ │\n",
+       "│\u001b[35m \u001b[0m\u001b[35mapi      \u001b[0m\u001b[35m \u001b[0m│ http://localhost:8088/api/v1/openapi.json │ ✅ │\n",
        "└───────────┴───────────────────────────────────────────┴────┘\n"
       ]
      },
@@ -268,7 +290,7 @@
     }
    ],
    "source": [
-    "hagrid.check('localhost:8081', timeout=120)"
+    "hagrid.check('localhost:8088', timeout=120)"
    ]
   },
   {
@@ -312,7 +334,7 @@
    ],
    "source": [
     "import syft as sy\n",
-    "domain = sy.login(email='info@openmined.org', password='changethis', port=8081)"
+    "domain = sy.login(email='info@openmined.org', password='changethis', port=8088)"
    ]
   },
   {
