Move code from Colab to the local machine

--- a/AI Component/Model_Owner_Trainer.ipynb
+++ b/AI Component/Model_Owner_Trainer.ipynb
@@ -374,11 +374,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.7 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "61d78b88c669c087ea84009c87f435080b66ea52ffb4eac29e2a7f2a91dfed40"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
