--- a/Blockchain Component/bigchainDB.ipynb
+++ b/Blockchain Component/bigchainDB.ipynb
@@ -342,23 +342,38 @@
         "# ================================================================== Transfer the asset ===========================================================\n",
         "# In the above example, the data model plane is created and it is own by alice. \n",
         "creation_tx = bdb.transactions.retrieve(txid) # Retrieve the transaction from the block. \n",
-        "print(creation_tx)"
+        "creation_tx"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "D_T9gL1Kd3tr",
-        "outputId": "74689af5-1835-41db-88a0-e3512efd3da8"
+        "outputId": "21b56201-c622-4b21-8689-530edbc16b73"
       },
-      "execution_count": 20,
+      "execution_count": 94,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'], 'fulfills': None, 'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUB1LZFHeB_LbEMbHUOE8FDgUL7o8LeBSVVS4d2kXhQSOL6HQOlcqlDVG18U3UlCaec9twrFJTvH3CJb-Qvfk-QC'}], 'outputs': [{'public_keys': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'], 'condition': {'details': {'type': 'ed25519-sha-256', 'public_key': '3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'}, 'uri': 'ni:///sha-256;gX7ONrl4kBQGdQgjj_Jwvgnpg2UvBQrTHl7nTc1KSjc?fpt=ed25519-sha-256&cost=131072'}, 'amount': '1'}], 'operation': 'CREATE', 'metadata': None, 'asset': {'data': {'label_1': {'plane': [123, 156, 123, 145, 123]}}}, 'version': '2.0', 'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'}\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "   'fulfills': None,\n",
+              "   'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUB1LZFHeB_LbEMbHUOE8FDgUL7o8LeBSVVS4d2kXhQSOL6HQOlcqlDVG18U3UlCaec9twrFJTvH3CJb-Qvfk-QC'}],\n",
+              " 'outputs': [{'public_keys': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "   'condition': {'details': {'type': 'ed25519-sha-256',\n",
+              "     'public_key': '3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'},\n",
+              "    'uri': 'ni:///sha-256;gX7ONrl4kBQGdQgjj_Jwvgnpg2UvBQrTHl7nTc1KSjc?fpt=ed25519-sha-256&cost=131072'},\n",
+              "   'amount': '1'}],\n",
+              " 'operation': 'CREATE',\n",
+              " 'metadata': None,\n",
+              " 'asset': {'data': {'label_1': {'plane': [123, 156, 123, 145, 123]}}},\n",
+              " 'version': '2.0',\n",
+              " 'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
         }
       ]
     },
@@ -391,39 +406,16 @@
         ")\n",
         "\n",
         "fulfilled_transfer_tx = bdb.transactions.fulfill(prepared_transfer_tx, private_keys = alice_private_key)\n",
-        "print(fulfilled_transfer_tx)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "A3Yb58pGeSU0",
-        "outputId": "624a42ac-83ff-44fc-bc01-7557b391d41b"
-      },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'], 'fulfills': {'transaction_id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3', 'output_index': 0}, 'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUCzKETwT6RffdQXdJs7XyIbWhaufPEfasHN5pp8CnrnGyriBRvekcqUC54-cEZt8fJfT34-i5RFAvUyNQNDR2ED'}], 'outputs': [{'public_keys': ['9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'], 'condition': {'details': {'type': 'ed25519-sha-256', 'public_key': '9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'}, 'uri': 'ni:///sha-256;OsZFZ20QKaMLSdbivdF0PLPJfb_b3yZ1O5QPlj9nC9o?fpt=ed25519-sha-256&cost=131072'}, 'amount': '1'}], 'operation': 'TRANSFER', 'metadata': None, 'asset': {'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'}, 'version': '2.0', 'id': '42c43433decace07ffa3b163cba48c2f99aaae18283633a994fbfd4e85fcd74d'}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "fulfilled_transfer_tx"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XjVfcbIHkuBA",
-        "outputId": "85b1da09-bff9-4092-92cb-019e9a43f112"
+        "id": "A3Yb58pGeSU0",
+        "outputId": "2d07d057-7ee4-4a0c-c5c6-43eef9f65354"
       },
-      "execution_count": 32,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +438,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 96
         }
       ]
     },
@@ -454,25 +446,13 @@
       "cell_type": "code",
       "source": [
         "send_transfer_tx = bdb.transactions.send_commit(fulfilled_transfer_tx)\n",
-        "print(send_transfer_tx)"
+        "send_transfer_tx"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sb0xQegpglyG",
-        "outputId": "6e8ccfa4-00b1-4a47-fbb6-59389e42e5b3"
+        "id": "Sb0xQegpglyG"
       },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'asset': {'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'}, 'id': '42c43433decace07ffa3b163cba48c2f99aaae18283633a994fbfd4e85fcd74d', 'inputs': [{'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUCzKETwT6RffdQXdJs7XyIbWhaufPEfasHN5pp8CnrnGyriBRvekcqUC54-cEZt8fJfT34-i5RFAvUyNQNDR2ED', 'fulfills': {'output_index': 0, 'transaction_id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'}, 'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ']}], 'metadata': None, 'operation': 'TRANSFER', 'outputs': [{'amount': '1', 'condition': {'details': {'public_key': '9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz', 'type': 'ed25519-sha-256'}, 'uri': 'ni:///sha-256;OsZFZ20QKaMLSdbivdF0PLPJfb_b3yZ1O5QPlj9nC9o?fpt=ed25519-sha-256&cost=131072'}, 'public_keys': ['9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz']}], 'version': '2.0'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -484,9 +464,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fqkuJoGvjjAa",
-        "outputId": "4f60c80a-6f23-4c32-926b-04dc2bb5c66f"
+        "outputId": "3e22b5d7-3ec7-43bb-fc6d-c026d1e3aff3"
       },
-      "execution_count": 55,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,15 +489,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 99
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "transfer_asset_txid = send_transfer_tx['asset']['id']\n",
-        "transfer_asset_txid\n"
+        "transfer_asset_txid = send_transfer_tx['id']\n",
+        "transfer_asset_txid  # This is the transfer operation transaction id \n",
+        "\n",
+        "# send_transfer_tx['asset']['id']  => This is the whole block transaction id "
       ],
       "metadata": {
         "colab": {
@@ -525,90 +507,176 @@
           "height": 35
         },
         "id": "lJsUb5Belt7U",
-        "outputId": "2ece340c-3bff-4e76-c5e5-10db3f2e6528"
+        "outputId": "61ac3c97-4433-4f16-ae31-ca4e62f05df7"
       },
-      "execution_count": 53,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'"
+              "'42c43433decace07ffa3b163cba48c2f99aaae18283633a994fbfd4e85fcd74d'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 100
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "bdb.transactions.get(asset_id= txid)\n"
+        "bdb.transactions.get(asset_id= txid)\n",
+        "# An item transactions contains these two operations. [every transaction happens for this item.] aka. data object"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "epl5xAl4kC-e",
-        "outputId": "18897d99-cb2a-49e1-d9b1-22190603ee7d"
+        "outputId": "941723a3-e00b-4a25-b913-1bb5d71f7f64"
       },
-      "execution_count": 56,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[]"
+              "[{'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "    'fulfills': None,\n",
+              "    'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUB1LZFHeB_LbEMbHUOE8FDgUL7o8LeBSVVS4d2kXhQSOL6HQOlcqlDVG18U3UlCaec9twrFJTvH3CJb-Qvfk-QC'}],\n",
+              "  'outputs': [{'public_keys': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "    'condition': {'details': {'type': 'ed25519-sha-256',\n",
+              "      'public_key': '3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'},\n",
+              "     'uri': 'ni:///sha-256;gX7ONrl4kBQGdQgjj_Jwvgnpg2UvBQrTHl7nTc1KSjc?fpt=ed25519-sha-256&cost=131072'},\n",
+              "    'amount': '1'}],\n",
+              "  'operation': 'CREATE',\n",
+              "  'metadata': None,\n",
+              "  'asset': {'data': {'label_1': {'plane': [123, 156, 123, 145, 123]}}},\n",
+              "  'version': '2.0',\n",
+              "  'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'},\n",
+              " {'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "    'fulfills': {'transaction_id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3',\n",
+              "     'output_index': 0},\n",
+              "    'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUCzKETwT6RffdQXdJs7XyIbWhaufPEfasHN5pp8CnrnGyriBRvekcqUC54-cEZt8fJfT34-i5RFAvUyNQNDR2ED'}],\n",
+              "  'outputs': [{'public_keys': ['9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'],\n",
+              "    'condition': {'details': {'type': 'ed25519-sha-256',\n",
+              "      'public_key': '9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'},\n",
+              "     'uri': 'ni:///sha-256;OsZFZ20QKaMLSdbivdF0PLPJfb_b3yZ1O5QPlj9nC9o?fpt=ed25519-sha-256&cost=131072'},\n",
+              "    'amount': '1'}],\n",
+              "  'operation': 'TRANSFER',\n",
+              "  'metadata': None,\n",
+              "  'asset': {'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'},\n",
+              "  'version': '2.0',\n",
+              "  'id': '42c43433decace07ffa3b163cba48c2f99aaae18283633a994fbfd4e85fcd74d'}]"
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 101
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "bdb.transactions.retrieve(transfer_asset_txid) # Retrieve the transaction \"TRANSFER\" operation"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k0wcMilsqZ-T",
+        "outputId": "072cd814-7863-46a3-995c-b40d162f58df"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "   'fulfills': {'transaction_id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3',\n",
+              "    'output_index': 0},\n",
+              "   'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUCzKETwT6RffdQXdJs7XyIbWhaufPEfasHN5pp8CnrnGyriBRvekcqUC54-cEZt8fJfT34-i5RFAvUyNQNDR2ED'}],\n",
+              " 'outputs': [{'public_keys': ['9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'],\n",
+              "   'condition': {'details': {'type': 'ed25519-sha-256',\n",
+              "     'public_key': '9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'},\n",
+              "    'uri': 'ni:///sha-256;OsZFZ20QKaMLSdbivdF0PLPJfb_b3yZ1O5QPlj9nC9o?fpt=ed25519-sha-256&cost=131072'},\n",
+              "   'amount': '1'}],\n",
+              " 'operation': 'TRANSFER',\n",
+              " 'metadata': None,\n",
+              " 'asset': {'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'},\n",
+              " 'version': '2.0',\n",
+              " 'id': '42c43433decace07ffa3b163cba48c2f99aaae18283633a994fbfd4e85fcd74d'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "block_height = bdb.blocks.get(txid=transfer_asset_txid)\n",
         "block = bdb.blocks.retrieve(str(block_height)) # A whole information in this block. \n",
-        "block"
+        "block "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ECiauKfclnXD",
-        "outputId": "61c3e0fb-7587-42c5-8633-aca03924668a"
+        "outputId": "d758d02b-dcd1-4aa7-a187-319cf0af22d7"
       },
-      "execution_count": 36,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'height': 621,\n",
+              "{'height': 18,\n",
               " 'transactions': [{'inputs': [{'owners_before': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
-              "     'fulfills': None,\n",
-              "     'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUB1LZFHeB_LbEMbHUOE8FDgUL7o8LeBSVVS4d2kXhQSOL6HQOlcqlDVG18U3UlCaec9twrFJTvH3CJb-Qvfk-QC'}],\n",
-              "   'outputs': [{'public_keys': ['3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'],\n",
+              "     'fulfills': {'transaction_id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3',\n",
+              "      'output_index': 0},\n",
+              "     'fulfillment': 'pGSAICK7aP3TrLOAHLj2boU99PPYAcdsoWgYBNpeu7oR3KbngUCzKETwT6RffdQXdJs7XyIbWhaufPEfasHN5pp8CnrnGyriBRvekcqUC54-cEZt8fJfT34-i5RFAvUyNQNDR2ED'}],\n",
+              "   'outputs': [{'public_keys': ['9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'],\n",
               "     'condition': {'details': {'type': 'ed25519-sha-256',\n",
-              "       'public_key': '3LacGwYTEXM77ocAtybpTYE3hSv1es2FKGsUJY8ckwyQ'},\n",
-              "      'uri': 'ni:///sha-256;gX7ONrl4kBQGdQgjj_Jwvgnpg2UvBQrTHl7nTc1KSjc?fpt=ed25519-sha-256&cost=131072'},\n",
+              "       'public_key': '9Ui3bU1rtFDnTe1TYDE9j5FU7mDFucXzEW5ZUpEcxFxz'},\n",
+              "      'uri': 'ni:///sha-256;OsZFZ20QKaMLSdbivdF0PLPJfb_b3yZ1O5QPlj9nC9o?fpt=ed25519-sha-256&cost=131072'},\n",
               "     'amount': '1'}],\n",
-              "   'operation': 'CREATE',\n",
+              "   'operation': 'TRANSFER',\n",
               "   'metadata': None,\n",
-              "   'asset': {'data': {'label_1': {'plane': [123, 156, 123, 145, 123]}}},\n",
+              "   'asset': {'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'},\n",
               "   'version': '2.0',\n",
-              "   'id': '360f9aa79f1765a615e02abedef5aa571a94199eddaf739f6f7463f0c03d1ec3'}]}"
+              "   'id': '42c43433decace07ffa3b163cba48c2f99aaae18283633a994fbfd4e85fcd74d'}]}"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 105
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Try to divisible the assets"
+      ],
+      "metadata": {
+        "id": "s43NB-8Ut1b8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YXacjBfIt9jq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
