--- a/AI Component/Model_Owner_Trainer.ipynb
+++ b/AI Component/Model_Owner_Trainer.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/keran-w/AI-Blockchain-Final-Project/blob/main/AI%20Component/Model_Owner_Trainer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "02szQePAkTcI"
       },
       "source": [
@@ -31,17 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "63Shm75skP_8"
       },
       "outputs": [],
       "source": [
-        "# connect to google drive\n",
-        "from google.colab import drive\n",
+        "# Setup\n",
         "from IPython.display import clear_output\n",
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "clear_output()\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -49,29 +36,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aPUGAvmctEcc"
-      },
-      "outputs": [],
-      "source": [
-        "# install required packages\n",
-        "!pip install transformers\n",
-        "!pip install albumentations==0.4.6\n",
-        "clear_output()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "3ooc4gTUkitB"
       },
       "outputs": [],
       "source": [
         "# define dataset path\n",
-        "dataset_path = 'drive/MyDrive/Datasets/CIFAR10'\n",
-        "img_path = 'drive/MyDrive/Datasets/CIFAR10/images'"
+        "dataset_path = '../Datasets/CIFAR10'\n",
+        "img_path = '../Datasets/CIFAR10/images'"
       ]
     },
     {
@@ -374,17 +347,25 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.7 64-bit",
+      "display_name": "Python 3.10.6 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.9.7"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "61d78b88c669c087ea84009c87f435080b66ea52ffb4eac29e2a7f2a91dfed40"
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
     },
     "widgets": {
