--- a/AI Component/Model_Owner_Trainer.ipynb
+++ b/AI Component/Model_Owner_Trainer.ipynb
@@ -321,7 +321,10 @@
         "sample_batch_A = next(iter(A_loader))\n",
         "fc_net.eval()\n",
         "with torch.no_grad():\n",
-        "    logits = fc_net(sample_batch_A[0].to(device))"
+        "    logits = fc_net(sample_batch_A[0].to(device))\n",
+        "    y_pred = logits.argmax(1).detach().cpu().numpy()\n",
+        "    y_true = sample_batch_A[0].argmax(1)\n",
+        "    print('Batch accuracy:', np.mean(y_pred == y_true))\n"
       ]
     },
     {
